scripts/canary/istio/service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: github
spec:
  hosts:
  - "*.github.com"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: egress-mongo-all
spec:
  hosts:
  - jenkinsdemo.documents.azure.com
  ports:
  - name: mongo
    number: 10255
    protocol: MONGO
  resolution: NONE
